Mise à jour - Journée 31_03_21
Mise a jour organisation package

--- a/Non_Graphique/BatailleNaval/nbproject/private/private.properties
+++ b/Non_Graphique/BatailleNaval/nbproject/private/private.properties
@@ -1,2 +1,6 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
 user.properties.file=C:\\Users\\Th\u00e9ric PHERON\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
