--- a/Graphique/BatailleNavalGraphique/nbproject/project.properties
+++ b/Graphique/BatailleNavalGraphique/nbproject/project.properties
@@ -83,7 +83,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=bataillenavalgraphique.BatailleNavalGraphique
+javafx.main.class=bataillenavalgraphique.controller.BatailleNavalGraphique
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
